--- a/news/templates/news/index.html
+++ b/news/templates/news/index.html
@@ -1,35 +1,18 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" integrity="sha384-9ndCyUaAswrzVdK5JOD8WVi9W0hJ9oAtA2lmPZ/xFC6pFhY9ANNCeQjFZtB7EUFi" crossorigin="anonymous">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
-    <title>{{ title }}</title>
-  </head>
-  <body>
-  <nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <a class="navbar-brand" href="/">Navbar</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+{% extends 'base.html' %}
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item"><a class="nav-link" href="/">Главная</a></li>
-        <li class="nav-item"><a class="nav-link" href="/">Добавить новость</a></li>
-      </ul>
-    </div>
-</nav>
+{% block title %}
+    {{ title }} :: {{ block.super }}
+{% endblock %}
 
-<div class="container mt-3">
-    <h1>{{ title }}</h1>
-    <div class="row">
-    <div class="col-md-12">
-        {% for item in news %}
+{% block sidebar %}
+{% include 'inc/_sidebar.html' %}
+{% endblock %}
+
+{% block content %}
+    {% for item in news %}
         <div class="card mb-3">
-           <div class="card-header">
-              Категория: {{ item.category }}
+            <div class="card-header">
+                Категория: <a href="{{  item.category.get_absolute_url }}">{{ item.category }}</a>
             </div>
             <div class="card-body">
                 <div class="media">
@@ -40,9 +23,8 @@
                     {% endif %}
                     <div class="media-body">
                         <h5 class="card-title">{{ item.title }}</h5>
-
-                        <p class="card-text">{{ item.content|linebreaks|title }}.</p>
-                        <a href="#" class="btn btn-primary">Read more...</a>
+                        <p class="card-text">{{ item.content|safe|linebreaks|truncatewords:50}}.</p>
+                        <a href="{{ item.get_absolute_url }}" class="btn btn-primary">Read more...</a>
                     </div>
                 </div>
             </div>
@@ -50,12 +32,7 @@
                 {{ item.created_at|date:"Y-m-d H:i:s" }}
             </div>
         </div>
-        {%endfor%}
-        </div>
-    </div>
-</div>
+    {%endfor%}
+{% endblock %}
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-  </body>
-</html>
+
