--- a/news/templates/news/home_news_list.html
+++ b/news/templates/news/home_news_list.html
@@ -9,7 +9,8 @@
 {% endblock %}
 
 {% block content %}
-    {% for item in news %}
+{{ mixin_prop }}
+{% for item in news %}
         <div class="card mb-3">
             <div class="card-header">
                 Категория: <a href="{{  item.category.get_absolute_url }}">{{ item.category }}</a>
